client-assets/client.scss
/* ... */
.editor-styles-wrapper .wp-block-paragraph.is-style-black-bar,
.entry-content p.is-style-black-bar {
  display: block;
  text-align: center;
  text-transform: uppercase;
  font-family: $font-family-base;
  font-size: 20px;
  min-height: 12px;
  max-height: 16px;
  color: $dark;
  background-color: $dark;
  letter-spacing: 0.06px;
  line-height: 1;
  overflow: hidden;
}

.editor-styles-wrapper .wp-block-paragraph.is-style-black-bar strong,
.entry-content p.is-style-black-bar strong {
  background-color: #fff;
  color: $dark;
  padding: 0px 20px;
  font-weight: bold;
}

@media only screen and (max-width: 667px) {
  .entry-content p.is-style-black-bar strong,
  .editor-styles-wrapper .wp-block-paragraph.is-style-black-bar strong {
    min-height: 12px;
  }

  .entry-content p.is-style-black-bar strong,
  .editor-styles-wrapper .wp-block-paragraph.is-style-black-bar strong {
    padding: 5px 8px 2px 8px !important;
  }
}

.editor-styles-wrapper .wp-block-separator.is-style-black-bar,
.c9 .entry-content .wp-block-separator.is-style-black-bar {
  width: 100%;
  height: 20px;
  background-color: $dark;
}

/****************************************************************************************/
/* Client page title header on logins, search, pages, posts, etc. */
/****************************************************************************************/
.page-template-fullwidthpage .c9 .entry-header,
.container-width-page-wrapper.c9 .page .entry-header {
  background-color: $primary;
}

.c9 .entry-header {
  margin-bottom: 20px;
}

.page-search-results .home-search .entry-title {
  color: $light;
  font-size: 5em;
  line-height: 1;
  letter-spacing: 0.12em;
  text-align: center;
  text-transform: uppercase;
  font-weight: 500;
  margin-top: 80px;
}

@media only screen and (min-width: 1px) {
  .c9 .page .entry-header h1 {
    font-size: 5em;
    text-align: center;
    color: $light;
    margin: 70px auto;
    line-height: 1;
  }
}

@media only screen and (min-width: 768px) {
  .c9 .page .entry-header h1 {
    font-size: 8em;
  }
}

/****************************************************************************************/
/* Client unordered list stylings */
/****************************************************************************************/
.entry-content ul:not(.wp-block-gallery),
.entry-content ol,
.editor-styles-wrapper .editor-rich-text ol,
.editor-styles-wrapper .editor-rich-text ul:not(.wp-block-gallery) {
  line-height: 2;
}

.entry-content ul:not(.wp-block-gallery) li,
.editor-styles-wrapper .editor-rich-text ul:not(.wp-block-gallery) li {
  line-height: 1.6;
}

.entry-content ol,
.entry-content
  ul:not(.blocks-gallery-grid):not(.wp-block-gallery):not(.wc-block-grid__products):not(.gfield_checkbox):not(.gfield_radio):not(.nav-tabs):not(.c9-share-list):not(.products) {
  margin: 30px 0px 30px 30px;
}

.entry-content ol li,
.editor-styles-wrapper .editor-rich-text ol li,
.entry-content
  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers)
  li,
.editor-styles-wrapper
  .editor-rich-text
  ul:not(.wp-block-gallery):not(.blocks-gallery-grid):not(.products):not(.nav-tabs):not(.page-numbers)
  li {
  margin: 15px 0px;
}

@media only screen and (max-width: 414px) {
  .c9 .entry-content .c9-horizontal-tabs.resources-tabs ul.nav.nav-tabs {
    margin-top: 0px;
  }

  .c9
    .entry-content
    .c9-horizontal-tabs.resources-tabs
    .c9-horizontal-tabs-tab
    ul:not(.blocks-gallery-grid):not(.wc-block-grid__products):not(.gfield_checkbox):not(.gfield_radio):not(.nav-tabs):not(.c9-share-list):not(.products) {
    margin: 0px;
  }

  .home .c9-horizontal-tabs-tab:last-child .wp-block-spacer {
    display: none;
  }

  .home .by-user-gallery .blocks-gallery-item:nth-child(3) {
    max-width: 50%;
    height: auto;
    margin: 0px auto;
  }
}

.entry-content ul:not(.wp-block-gallery) li,
.editor-styles-wrapper .editor-rich-text ul:not(.wp-block-gallery) li {
  position: relative;
}

/* horizontal rules customized*/
.entry-content .wp-block-column .wp-block-separator.is-style-wide,
.wp-block-columns .wp-block-separator.is-style-wide {
  width: 60%;
  max-width: 60%;
}

/* resources guide */
@media only screen and (max-width: 414px) {
  .c9-grid.p5 .c9-layout-columns-2 .c9-column-inner ul:not(.wp-block-gallery) {
    margin: 0px !important;
  }
}

/****************************************************************************************/
/* Client Tabs + Toggles */
/****************************************************************************************/

/* big style toggles */
.c9 .c9-toggles .c9-toggles-toggle,
.editor-styles-wrapper .c9-toggles .c9-toggles-toggle {
  padding: 29px 0px 15px 0px;
  border-top: 1px solid #979797;
}

.c9 .c9-toggles .c9-toggles-toggle .c9-toggles-item-collapse {
  top: -4px;
}

.c9-toggles .c9-toggles-toggle:last-child {
  border-bottom: 1px solid #979797;
}

.c9 .c9-toggles .c9-toggles-item-heading .c9-toggles-toggle-label,
.editor-styles-wrapper
  .c9-toggles
  .c9-toggles-item-heading
  .c9-toggles-toggle-label {
  font-family: $headings-font-family;
  text-transform: uppercase;
  color: $dark;
  font-size: 7.9em;
  text-align: left;
  line-height: 0.9;
  transition: color 0.5s ease-out;
}

.c9 .c9-toggles .c9-toggles-item-heading:hover .c9-toggles-toggle-label {
  color: $gray-900;
}

.c9 .c9-toggles .c9-toggles-item-heading {
  cursor: pointer;
}

/* small style toggle */
.editor-styles-wrapper
  .c9-toggles.is-style-toggles-small
  .c9-toggles-toggle
  .c9-toggles-item-heading
  .c9-toggles-toggle-label,
.c9
  .c9-toggles.is-style-toggles-small
  .c9-toggles-toggle
  .c9-toggles-item-heading
  .c9-toggles-toggle-label {
  font-family: $font-family-base;
  text-transform: none;
}
/* ... */

